--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="icon" type="favicon" href="img/supertux.png">
 </head>
 <body>
-    <h1>Maquetación web</h1>
+    <!--Inicio de Cabecera-->
+    <header id="header">
+        <div class="wrap">
+            <div id="logo">
+                <span class="gear">S</span>
+                <h3>BLOG</h3>
+            </div>
+        </div>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">FORMACIÓN</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--Fin de Cabecera-->
 </body>
 </html>
