Maquetación del banner

--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
         </div>
     </header>
     <!--Fin de Cabecera-->
+
+    <!--Inicio Banner-->
+    <section class="wrap">
+        <section class="info">
+            <dir id="banner">
+                <h1>CURSOS DE DESARROLLO WEB CON VICTOR ROBLES WEB</h1>
+            </dir>
+        </section>
+    </section>
+
+    <!--Fin Banner-->
 </body>
 </html>
