--- a/index.html
+++ b/index.html
@@ -37,6 +37,46 @@
                 <h1>CURSOS DE DESARROLLO WEB CON VICTOR ROBLES WEB</h1>
             </dir>
         </section>
+
+        <dir id="cards">
+            <dir class="card">
+                <p class="icon">H</p>
+                <h2 class="category">Desarrollo web</h2>
+                <p class="description">Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmasrter!</p>
+            </dir>
+        </dir>
+
+        <dir id="cards">
+            <dir class="card">
+                <p class="icon">H</p>
+                <h2 class="category">Sistemas Operativos</h2>
+                <p class="description">Aprende a administrar sistemas de Linux y Windows.</p>
+            </dir>
+        </dir>
+
+        <dir id="cards">
+            <dir class="card">
+                <p class="icon">H</p>
+                <h2 class="category">Hardware</h2>
+                <p class="description">Conoce los entresijos del hardware.</p>
+            </dir>
+        </dir>
+
+        <dir id="cards">
+            <dir class="card">
+                <p class="icon">H</p>
+                <h2 class="category">Redes e Internet</h2>
+                <p class="description">Aprende a configurar y administrar redes informaticas y servidores.</p>
+            </dir>
+        </dir>
+
+        <dir id="cards">
+            <dir class="card">
+                <p class="icon">H</p>
+                <h2 class="category">Bases de datos</h2>
+                <p class="description">Aprende a montar y administrar bases de datos.</p>
+            </dir>
+        </dir>
     </section>
 
     <!--Fin Banner-->
