--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <dir id="cards">
             <dir class="card">
-                <p class="icon">H</p>
+                <p class="icon">_</p>
                 <h2 class="category">Sistemas Operativos</h2>
                 <p class="description">Aprende a administrar sistemas de Linux y Windows.</p>
             </dir>
@@ -56,7 +56,7 @@
 
         <dir id="cards">
             <dir class="card">
-                <p class="icon">H</p>
+                <p class="icon">S</p>
                 <h2 class="category">Hardware</h2>
                 <p class="description">Conoce los entresijos del hardware.</p>
             </dir>
@@ -64,7 +64,7 @@
 
         <dir id="cards">
             <dir class="card">
-                <p class="icon">H</p>
+                <p class="icon">u</p>
                 <h2 class="category">Redes e Internet</h2>
                 <p class="description">Aprende a configurar y administrar redes informaticas y servidores.</p>
             </dir>
@@ -72,7 +72,7 @@
 
         <dir id="cards">
             <dir class="card">
-                <p class="icon">H</p>
+                <p class="icon">a</p>
                 <h2 class="category">Bases de datos</h2>
                 <p class="description">Aprende a montar y administrar bases de datos.</p>
             </dir>
