Correciones tarjetas HTML

--- a/index.html
+++ b/index.html
@@ -30,55 +30,60 @@
     </header>
     <!--Fin de Cabecera-->
 
-    <!--Inicio Banner-->
     <section class="wrap">
         <section class="info">
-            <dir id="banner">
+
+            <!--Inicio Banner-->
+            <div id="banner">
                 <h1>CURSOS DE DESARROLLO WEB CON VICTOR ROBLES WEB</h1>
-            </dir>
+            </div>
+            <!--Fin Banner-->
+        
+            <!--Inicio Tarjetas-->
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo web</h2>
+                    <p class="description">Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmasrter!</p>
+                </div>
+            </div>
+
+            <div id="cards">
+             <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas Operativos</h2>
+                    <p class="description">Aprende a administrar sistemas de Linux y Windows.</p>
+                </div>
+            </div>
+
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">Conoce los entresijos del hardware.</p>
+                </div>
+            </div>
+
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e Internet</h2>
+                    <p class="description">Aprende a configurar y administrar redes informaticas y servidores.</p>
+                </div>
+            </div>
+
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">Aprende a montar y administrar bases de datos.</p>
+                </div>
+            </div>
+            <!--Fin de tarjetas-->
         </section>
 
-        <dir id="cards">
-            <dir class="card">
-                <p class="icon">H</p>
-                <h2 class="category">Desarrollo web</h2>
-                <p class="description">Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmasrter!</p>
-            </dir>
-        </dir>
-
-        <dir id="cards">
-            <dir class="card">
-                <p class="icon">_</p>
-                <h2 class="category">Sistemas Operativos</h2>
-                <p class="description">Aprende a administrar sistemas de Linux y Windows.</p>
-            </dir>
-        </dir>
-
-        <dir id="cards">
-            <dir class="card">
-                <p class="icon">S</p>
-                <h2 class="category">Hardware</h2>
-                <p class="description">Conoce los entresijos del hardware.</p>
-            </dir>
-        </dir>
-
-        <dir id="cards">
-            <dir class="card">
-                <p class="icon">u</p>
-                <h2 class="category">Redes e Internet</h2>
-                <p class="description">Aprende a configurar y administrar redes informaticas y servidores.</p>
-            </dir>
-        </dir>
-
-        <dir id="cards">
-            <dir class="card">
-                <p class="icon">a</p>
-                <h2 class="category">Bases de datos</h2>
-                <p class="description">Aprende a montar y administrar bases de datos.</p>
-            </dir>
-        </dir>
+        
     </section>
 
-    <!--Fin Banner-->
 </body>
 </html>
