--- a/index.html
+++ b/index.html
@@ -80,9 +80,57 @@
                 </div>
             </div>
             <!--Fin de tarjetas-->
+
         </section>
 
-        
+        <!--Inicio Barra Lateral-->
+        <aside id="lateral">
+
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form>
+                    <input type="text">
+                    <input type="button" value="L">
+                </form>
+            </div>
+
+            <h3>LOGIN</h3>
+            <div id="login">
+                <form>
+                    <label id="user">U  
+                    </label>
+                    <input type="email">
+
+                    <label id="password">w</label>
+                    <input type="password">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpiar">
+
+                    <a href="#"> Registrate aquí</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+
+            <h3>REDES SOCIALES</h3>
+            <div id="social">
+                <div class="twwiter">
+                    <a href="#">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#">f</a>
+                </div>
+                <div class="youtuber">
+                    <a href="#">y</a>
+                </div>
+            </div>
+
+            <h3>PATROCINADORES</h3>
+            <div id="sponsors"></div>
+
+        </aside>
+        <!--Fin Barra Lateral-->
+
     </section>
 
 </body>
