--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
             <div id="search">
                 <form>
                     <input type="text">
-                    <input type="button" value="L">
+                    <input type="button" value="L" class="icon">
                 </form>
             </div>
 
             <h3>LOGIN</h3>
             <div id="login">
                 <form>
-                    <label id="user">U  
+                    <label id="user" class="icon">U  
                     </label>
                     <input type="email">
 
-                    <label id="password">w</label>
+                    <label id="password" class="icon">w</label>
                     <input type="password">
 
                     <input type="submit" value="Entrar">
@@ -115,13 +115,13 @@
             <h3>REDES SOCIALES</h3>
             <div id="social">
                 <div class="twwiter">
-                    <a href="#">t</a>
+                    <a href="#" class="icon">t</a>
                 </div>
                 <div class="facebook">
-                    <a href="#">f</a>
+                    <a href="#" class="icon">f</a>
                 </div>
                 <div class="youtuber">
-                    <a href="#">y</a>
+                    <a href="#" class="icon">y</a>
                 </div>
             </div>
 
