--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <h3>LOGIN</h3>
-            <div id="login">
+            <div id="login" class="aside-box">
                 <form>
                     <label id="user" class="icon">U  
                     </label>
@@ -113,7 +113,7 @@
             </div>
 
             <h3>REDES SOCIALES</h3>
-            <div id="social">
+            <div id="social" class="aside-box">
                 <div class="twwiter">
                     <a href="#" class="icon">t</a>
                 </div>
@@ -126,7 +126,7 @@
             </div>
 
             <h3>PATROCINADORES</h3>
-            <div id="sponsors"></div>
+            <div id="sponsors" class="aside-box"></div>
 
         </aside>
         <!--Fin Barra Lateral-->
