HTML de los articulos

--- a/index.html
+++ b/index.html
@@ -131,6 +131,93 @@
         </aside>
         <!--Fin Barra Lateral-->
 
+        <!--Inicio Articulos-->
+        <section id="articles">
+            <h2>ULTIMOS ARTICULOS</h2>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dec</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del artículo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod in nisi quis ornare. Quisque vel justo tristique, fringilla nunc id, tincidunt nulla. Etiam lacus dolor, venenatis feugiat felis gravida, maximus tristique lacus. Integer ac quam neque. Pellentesque eu odio efficitur, convallis purus vitae, lobortis massa
+                </p>
+            </article>
+            <Article id="blog">
+                <a href="#">Ir al blog</a>
+            </Article>
+        </section>
+
+        <!--Fin Articulos-->
+
     </section>
 
 </body>
