--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <!--Inicio Articulos-->
         <section id="articles">
             <h2>ULTIMOS ARTICULOS</h2>
+            <div class="clearfix"></div>
             <article>
                 <div class="data">
                     <span>Fecha: 12 dec</span>
