--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="clearfix"></div>
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
@@ -150,7 +150,7 @@
 
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
@@ -163,7 +163,7 @@
 
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
@@ -176,7 +176,7 @@
 
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
@@ -189,7 +189,7 @@
 
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
@@ -202,7 +202,7 @@
 
             <article>
                 <div class="data">
-                    <span>Fecha: 12 dec</span>
+                    <span>Fecha: 12 dic</span>
                     <span>Categoría: Pruebas</span>
                 </div>
                 <h4>
