--- a/index.html
+++ b/index.html
@@ -221,5 +221,60 @@
 
     </section>
 
+    <!--INICIO PIE DE PÁGINA-->
+    <div class="clearfix"></div>
+    <footer id="footer">
+        <div class="wrap">
+            <nav id="menu_footer">
+                <h5>MENÚ</h5>
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACIÓN</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+
+            <div id="location">
+                <h5>¿DONDE ESTAMOS?</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.832955745599!2d-74.06623305063498!3d4.623874130490149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9987cd53d23f%3A0xe7825d04789df223!2sPARQUE%20NACIONAL!5e0!3m2!1ses!2sco!4v1616743763261!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+
+            <div id="info">
+                <h5>Desarrollado con</h5>
+                <p>
+                   <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado con HTML y CSS" > 
+                </p>
+
+                <h5>Optimizado para</h5>
+                <p id="browsers">
+                    <a href="#">
+                        <img src="img/firefox-icon.png" alt="Firefox" title="Firefox" >
+                    </a>
+                    <a href="#">
+                        <img src="img/chrome.png" alt="Chrome" title="Chrome" >
+                    </a>
+                    <a href="#">
+                        <img src="img/Opera_256x256.png" alt="Opera" title="Opera" >
+                    </a>
+                    <a href="#">
+                        <img src="img/safari.png" alt="Safari" title="Safari" >
+                    </a>
+                    <a href="#">
+                        <img src="img/android.png" alt="Android" title="Android" >
+                    </a>
+                    <a href="#">
+                        <img src="img/ios.png" alt="Apple" title="Apple" >
+                    </a>
+                </p>
+
+                <h5>Autor</h5>
+                <p>&copy; Iván Guerrero Villamizar</p>
+            </div>
+            
+        </div>
+    </footer>
+    <!--FIN PIE DE PÁGINA-->
+
 </body>
 </html>
