--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="clearfix"></div>
     <footer id="footer">
         <div class="wrap">
-            <nav id="menu_footer">
+            <div id="menu_footer">
                 <h5>MENÚ</h5>
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -233,7 +233,7 @@
                     <li><a href="#">FORMACIÓN</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
-            </nav>
+            </div>
 
             <div id="location">
                 <h5>¿DONDE ESTAMOS?</h5>
