Responsive de las tarjetas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../aprendiendo css/01-selectores/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Maquetación web</title>
     <link rel="icon" type="favicon" href="img/supertux.png">
 </head>
@@ -84,6 +85,7 @@
         </section>
 
         <!--Inicio Barra Lateral-->
+        <div class="clearfix"></div>
         <aside id="lateral">
 
             <h3>BUSCAR</h3>
